# sps_genai_assignment5

./: .gitignore  Dockerfile  README.md  fine_tune_gpt2.py  pyproject.toml
app/: __init__.py  bigram_model.py  llm_model.py  main.py  rnn_model.py
