[project]
name = "assignment5"
version = "0.1.0"
description = "RNN + fine-tuned GPT-2 text generation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "uvicorn>=0.38.0",
    "torch>=2.3.0",
    "requests>=2.32.0",
    "transformers>=4.44.0",
    "datasets>=3.0.0",
    "accelerate>=0.33.0",
]